--- a/worldcities.client/src/app/cities/city-edit.component.html
+++ b/worldcities.client/src/app/cities/city-edit.component.html
@@ -13,24 +13,29 @@
     <mat-form-field>
       <mat-label>Name:</mat-label>
       <input matInput formControlName="name" required placeholder="Type a name">
-      <mat-error *ngIf="form.controls['name'].errors?.['required']">
-        Name is required.
+      <mat-error *ngFor="let error of getErrors(form.get('name')!,
+              'Name')">
+        {{error}}
       </mat-error>
     </mat-form-field>
     <!-- Lat -->
     <mat-form-field>
       <mat-label>Latitude:</mat-label>
       <input matInput formControlName="lat" required placeholder="Insert latitude">
-      <mat-error *ngIf="form.controls['lat'].errors?.['required']">
-        Latitude is required.
+      <mat-error *ngFor="let error of getErrors(form.get('lat')!,
+        'Latitude',
+        { 'pattern' : 'requires a positive or negative number with 0-4 decimal values' })">
+        {{error}}
       </mat-error>
     </mat-form-field>
     <!-- Lon -->
     <mat-form-field>
       <mat-label>Longitude:</mat-label>
       <input matInput formControlName="lon" required placeholder="Insert longitude">
-      <mat-error *ngIf="form.controls['lon'].errors?.['required']">
-        Longitude is required.
+      <mat-error *ngFor="let error of getErrors(form.get('lon')!,
+        'Longitude',
+        { 'pattern' : 'requires a positive or negative number with 0-4 decimal values' })">
+        {{error}}
       </mat-error>
     </mat-form-field>
     <!-- Country -->
@@ -42,8 +47,9 @@
           {{country.name}}
         </mat-option>
       </mat-select>
-      <mat-error *ngIf="form.controls['countryId'].errors?.['required']">
-        Please select a Country.
+      <mat-error *ngFor="let error of getErrors(form.get('countryId')!,
+              'Country')">
+        {{error}}
       </mat-error>
     </mat-form-field>
     <div>
